add empty resume page

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dmitrii Danilov</title>
+    <title>Dmitrii Danilov's resume</title>
   </head>
   <body>
     <ul>
@@ -11,5 +11,7 @@
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">About</a></li>
     </ul>
+
+    <h1>Dmitrii Danilov's resume</h1>
   </body>
 </html>
