--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   <body>
     <ul>
       <li><a href="resume.html">Resume</a></li>
-      <li><a href="#">Portfolio</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="#">About</a></li>
     </ul>
 
