--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   </head>
   <body>
     <ul>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="#">About</a></li>
+      <li>
+        <a href="resume.html">Resume</a>
+      </li>
+      <li>
+        <a href="portfolio.html">Portfolio</a>
+      </li>
+      <li>
+        <a href="#">About</a>
+      </li>
     </ul>
   </body>
 </html>
