--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dmitrii Danilov's resume</title>
+    <title>Dmitrii Danilov's about</title>
   </head>
   <body>
     <ul>
@@ -18,6 +18,6 @@
       </li>
     </ul>
 
-    <h1>Dmitrii Danilov's resume</h1>
+    <h1>Dmitrii Danilov's about</h1>
   </body>
 </html>
