--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <a href="portfolio.html">Portfolio</a>
       </li>
       <li>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
       </li>
     </ul>
 
