--- a/portfolio.html
+++ b/portfolio.html
@@ -19,5 +19,31 @@
     </ul>
 
     <h1>Dmitrii Danilov's portfolio</h1>
+
+    <h2>Project 1</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
+      corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
+      vitae.
+    </p>
+
+    <h2>Project 2</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
+      ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
+    </p>
+
+    <h2>Project 3</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
+      Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
+    </p>
+
+    <h2>Project 4</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
+      adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
+      illum quis!
+    </p>
   </body>
 </html>
