--- a/about.html
+++ b/about.html
@@ -19,5 +19,50 @@
     </ul>
 
     <h1>Dmitrii Danilov's about</h1>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, velit quasi animi ea, corrupti rem blanditiis id
+      enim reprehenderit neque dolorem aspernatur officiis, ratione laudantium minus aperiam nisi recusandae odit soluta
+      eveniet odio reiciendis itaque! Repudiandae esse corporis distinctio delectus ea minus sed architecto, unde id
+      voluptate dolorum! Earum ab cumque nesciunt molestiae beatae enim rem quas ducimus non doloremque? Impedit
+      blanditiis modi doloribus soluta similique inventore veritatis numquam. Amet voluptas nemo, eligendi fugiat
+      repellendus quod perspiciatis sint explicabo laborum eum illo magni error praesentium! Placeat error quisquam
+      possimus rerum dicta. Consequatur incidunt totam sunt explicabo voluptatibus, quisquam laboriosam minus
+      necessitatibus labore beatae? Assumenda, laudantium numquam neque placeat aspernatur asperiores dolore rem quidem
+      magni nesciunt maiores cupiditate minima dolores, similique autem deserunt iste. Quae mollitia vel nulla quibusdam
+      odit adipisci laborum officia pariatur. Officiis deserunt ipsum fugit. Reiciendis quo quaerat sed maxime. Minus quod
+      debitis hic quis assumenda. Quibusdam illo earum excepturi! Accusamus et facere nostrum rerum, dolores, voluptatum
+      obcaecati quas corporis accusantium iusto non doloribus. Aliquid itaque, iusto quis neque, vitae ratione at
+      dignissimos quam distinctio soluta aperiam inventore maxime iure labore consectetur quo quas perferendis veritatis
+      voluptatem, praesentium corporis accusamus illum. Accusamus provident rem, excepturi harum, iusto tenetur laboriosam
+      repudiandae ea, vel a iure. Explicabo delectus voluptatibus tenetur quidem ad. Esse ut, ipsum ab enim quod quisquam
+      asperiores ex voluptatum! Libero inventore quia quis incidunt pariatur aut vitae explicabo quae assumenda nostrum
+      repudiandae debitis provident voluptate dolore ducimus, ullam dolores voluptatem omnis impedit sint consectetur!
+      Saepe id eos illo iure repudiandae odit, obcaecati, natus dolore, beatae excepturi qui! Quos atque corporis
+      obcaecati dolores omnis vel, nemo, aliquid perferendis mollitia quaerat numquam earum odit voluptatem ipsam culpa
+      repellat et adipisci, fugiat provident? Facilis, molestias possimus optio eligendi voluptas nisi illo voluptate
+      exercitationem nesciunt illum? Aperiam eos non neque similique tempora eum molestias quidem alias maxime numquam
+      architecto quos ratione, fugiat iste facere maiores nemo possimus illo modi molestiae? Ea, distinctio deserunt amet
+      quidem sit soluta necessitatibus molestiae officiis voluptas fugit dolorum recusandae, quam tempora nam fuga ipsam
+      qui? A, quisquam! Dicta dolorem alias, voluptatibus nemo accusamus unde vero repudiandae dolores. Voluptatum
+      impedit, perferendis rerum dolorem dignissimos at autem neque dolores iste sequi iure debitis repudiandae ab maiores
+      ea. Eaque, consectetur! Facilis ullam voluptate consequuntur quia nemo omnis ex culpa blanditiis accusantium aut non
+      velit, provident eos reiciendis rem facere officiis quo porro hic optio? Delectus hic vero, explicabo laborum ut
+      voluptate sapiente quaerat pariatur dignissimos vel nulla atque, eaque in officia aliquid minus qui quo quam nemo
+      consequatur id. Quis incidunt ut laudantium nisi eligendi odit excepturi odio repellendus, commodi placeat
+      necessitatibus dolor eveniet quam debitis perspiciatis nobis totam aliquam, aspernatur impedit a dolorem repudiandae
+      quo! Expedita, temporibus explicabo? Libero beatae sed pariatur. Quas aut ad repellat similique modi ipsam porro
+      sapiente, iure dolores totam maxime omnis deleniti beatae. Magni, porro. Dolor nihil, perferendis aut modi tenetur
+      fugiat explicabo exercitationem recusandae quae eaque nobis iusto, eum ipsam ea atque dignissimos. Voluptate,
+      aperiam! Nostrum, sunt cupiditate sint saepe nam quaerat!
+    </p>
+
+    <ul>
+      <li>Telegram</li>
+      <li>What's App</li>
+      <li>Instagram</li>
+      <li>YouTube</li>
+      <li>GitHub</li>
+    </ul>
   </body>
 </html>
