format source code: indents, nav and main

--- a/resume.html
+++ b/resume.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dmitrii Danilov's resume</title>
   </head>
+
   <body>
-    <ul>
-      <li>
-        <a href="resume.html">Resume</a>
-      </li>
-      <li>
-        <a href="portfolio.html">Portfolio</a>
-      </li>
-      <li>
-        <a href="about.html">About</a>
-      </li>
-    </ul>
+    <nav>
+      <ul>
+        <li>
+          <a href="resume.html">Resume</a>
+        </li>
+        <li>
+          <a href="portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
 
-    <h1>Dmitrii Danilov's resume</h1>
+    <main>
+      <h1>Dmitrii Danilov's resume</h1>
 
-    <h2>Summary</h2>
-    <p>
-      Experienced front-end developer with expertise in Angular, React, JavaScript, TypeScript, AWS and Firebase
-    </p>
+      <h2>Summary</h2>
+      <p>
+        Experienced front-end developer with expertise in Angular, React, JavaScript, TypeScript, AWS and Firebase
+      </p>
 
-    <h2>Experience</h2>
+      <h2>Experience</h2>
 
-    <h3>Senior Software Engineer</h3>
-    <p>EPAM Systems - 2025 Feb to Present</p>
+      <h3>Senior Software Engineer</h3>
+      <p>EPAM Systems - 2025 Feb to Present</p>
 
-    <h3>Senior Software Engineer</h3>
-    <p>SberDevices - 2024 March to 2025 Feb</p>
+      <h3>Senior Software Engineer</h3>
+      <p>SberDevices - 2024 March to 2025 Feb</p>
 
-    <h3>Middle Frontend Developer</h3>
-    <p>STRONG TEAM - 2022 Jul to 2024 March</p>
+      <h3>Middle Frontend Developer</h3>
+      <p>STRONG TEAM - 2022 Jul to 2024 March</p>
 
-    <h3>Junior Frontend Developer</h3>
-    <p>Center for Digital Development - 2019 Oct to 2022 Jul</p>
+      <h3>Junior Frontend Developer</h3>
+      <p>Center for Digital Development - 2019 Oct to 2022 Jul</p>
 
-    <h2>Education</h2>
-    <p>Bachelor’s Degree in Computer Science</p>
+      <h2>Education</h2>
+      <p>Bachelor’s Degree in Computer Science</p>
 
-    <h2>Skills</h2>
-    <ul>
-      <li>Angular</li>
-      <li>React</li>
-      <li>JavaScript</li>
-      <li>TypeScript</li>
-      <li>AWS</li>
-      <li>Firebase</li>
-    </ul>
+      <h2>Skills</h2>
+      <ul>
+        <li>Angular</li>
+        <li>React</li>
+        <li>JavaScript</li>
+        <li>TypeScript</li>
+        <li>AWS</li>
+        <li>Firebase</li>
+      </ul>
+    </main>
   </body>
 </html>
