--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dmitrii Danilov</title>
   </head>
+
   <body>
-    <ul>
-      <li>
-        <a href="resume.html">Resume</a>
-      </li>
-      <li>
-        <a href="portfolio.html">Portfolio</a>
-      </li>
-      <li>
-        <a href="about.html">About</a>
-      </li>
-    </ul>
+    <nav>
+      <ul>
+        <li>
+          <a href="resume.html">Resume</a>
+        </li>
+        <li>
+          <a href="portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
