--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dmitrii Danilov's portfolio</title>
   </head>
+
   <body>
-    <ul>
-      <li>
-        <a href="resume.html">Resume</a>
-      </li>
-      <li>
-        <a href="portfolio.html">Portfolio</a>
-      </li>
-      <li>
-        <a href="about.html">About</a>
-      </li>
-    </ul>
+    <nav>
+      <ul>
+        <li>
+          <a href="resume.html">Resume</a>
+        </li>
+        <li>
+          <a href="portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+      </ul>
+    </nav>
 
-    <h1>Dmitrii Danilov's portfolio</h1>
+    <main>
+      <h1>Dmitrii Danilov's portfolio</h1>
 
-    <h2>Project 1</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
-      corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
-      vitae.
-    </p>
+      <h2>Project 1</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
+        corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
+        vitae.
+      </p>
 
-    <h2>Project 2</h2>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
-      ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
-    </p>
+      <h2>Project 2</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
+        ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
+      </p>
 
-    <h2>Project 3</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
-      Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
-    </p>
+      <h2>Project 3</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
+        Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
+      </p>
 
-    <h2>Project 4</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
-      adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
-      illum quis!
-    </p>
+      <h2>Project 4</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
+        adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
+        illum quis!
+      </p>
+    </main>
   </body>
 </html>
