add validation images

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,9 @@
         adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
         illum quis!
       </p>
+
+      <h2>Validation</h2>
+      <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation">
     </main>
   </body>
 </html>
