--- a/resume.html
+++ b/resume.html
@@ -56,6 +56,9 @@
         <li>AWS</li>
         <li>Firebase</li>
       </ul>
+
+      <h2>Validation</h2>
+      <img src="images/resume-validate.png" alt="Resume HTML Validation">
     </main>
   </body>
 </html>
