--- a/about.html
+++ b/about.html
@@ -49,6 +49,9 @@
         <source src="videos/about.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
+
+      <h2>Validation</h2>
+      <img src="images/about-validate.png" alt="About HTML Validation">
     </main>
   </body>
 </html>
