make about page main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dmitrii Danilov</title>
+    <title>Dmitrii Danilov's about</title>
 
     <link rel="stylesheet" href="css/reset.css">
   </head>
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="index.html">Resume</a>
         </li>
         <li>
           <a href="portfolio.html">Portfolio</a>
@@ -23,5 +23,37 @@
         </li>
       </ul>
     </nav>
+
+    <main>
+      <h1>Dmitrii Danilov's about</h1>
+
+      <p>
+        Hello! I'm an experienced frontend developer with a passion for creating dynamic, user-friendly applications. My
+        expertise lies in Angular, React, JavaScript, TypeScript, Firebase, and AWS, and I enjoy exploring new technologies
+        that push the boundaries of web development.
+      </p>
+
+      <p>
+        Outside of work, I love contributing to open-source projects, mentoring junior developers, and writing technical
+        blogs on best practices in frontend development.
+      </p>
+
+      <h2>Hobbies & Interests</h2>
+      <ul>
+        <li>Building innovative web applications</li>
+        <li>Exploring cloud computing with AWS</li>
+        <li>Learning new programming languages</li>
+        <li>Traveling and experiencing new cultures</li>
+      </ul>
+
+      <h2>Video presentation</h2>
+      <video controls height="300">
+        <source src="videos/about.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+
+      <h2>Validation</h2>
+      <img src="images/about-validate.png" alt="About HTML Validation">
+    </main>
   </body>
 </html>
