--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="index.html">Resume</a>
         </li>
         <li>
           <a href="portfolio.html">Portfolio</a>
