--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         Your browser does not support the video tag.
       </video>
 
-      <h2>Validation</h2>
-      <img src="images/about-validate.png" alt="About HTML Validation">
+      <!-- <h2>Validation</h2>
+      <img src="images/about-validate.png" alt="About HTML Validation"> -->
     </main>
   </body>
 </html>
