--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
         illum quis!
       </p>
 
-      <h2>Validation</h2>
-      <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation">
+      <!-- <h2>Validation</h2>
+      <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation"> -->
     </main>
   </body>
 </html>
