--- a/resume.html
+++ b/resume.html
@@ -59,8 +59,8 @@
         <li>Firebase</li>
       </ul>
 
-      <h2>Validation</h2>
-      <img src="images/resume-validate.png" alt="Resume HTML Validation">
+      <!-- <h2>Validation</h2>
+      <img src="images/resume-validate.png" alt="Resume HTML Validation"> -->
     </main>
   </body>
 </html>
