--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Dmitrii Danilov's portfolio</title>
 
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
