special styles for main page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
 
   <body>
@@ -20,7 +21,7 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html">Resume</a>
+            <a id="resumeLinkBtn" href="index.html">Resume</a>
           </li>
           <li>
             <a href="portfolio.html">Portfolio</a>
@@ -77,7 +78,7 @@
 
         <section>
           <h2>Key Skills</h2>
-          <ul>
+          <ul id="keySkillsList">
             <li>JavaScript & TypeScript</li>
             <li>Angular & React</li>
             <li>Cloud Computing (AWS, Firebase)</li>
@@ -92,7 +93,6 @@
         </section>
 
         <section>
-          
           <h2>What People Say</h2>
           <blockquote>
             "Dmitrii is a fantastic developer with an eye for detail. His expertise in Angular and JavaScript has helped our projects thrive!"
