add new elements to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,51 +16,88 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html">Resume</a>
-        </li>
-        <li>
-          <a href="portfolio.html">Portfolio</a>
-        </li>
-        <li>
-          <a href="about.html">About</a>
-        </li>
-      </ul>
-    </nav>
+    <div id="root">
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Resume</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+        </ul>
+      </nav>
 
-    <main>
-      <h1>Dmitrii Danilov's portfolio</h1>
+      <main>
+        <h1>Dmitrii Danilov's portfolio</h1>
 
-      <h2>Project 1</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
-        corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
-        vitae.
-      </p>
+        <section>
+          <h2>Project 1</h2>
 
-      <h2>Project 2</h2>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
-        ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
-      </p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Facebook_logo_%28square%29.png" alt="Project 1" />
 
-      <h2>Project 3</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
-        Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
-      </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
+            corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
+            vitae.
+          </p>
+        </section>
 
-      <h2>Project 4</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
-        adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
-        illum quis!
-      </p>
+        <section>
+          <h2>Project 2</h2>
 
-      <!-- <h2>Validation</h2>
-      <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation"> -->
-    </main>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="Project 2" />
+
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
+            ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
+          </p>
+        </section>
+
+        <section>     
+          <h2>Project 3</h2>
+
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Apple_logo_grey.svg" alt="Project 3" />
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
+            Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
+          </p>
+        </section>
+
+        <section>       
+          <h2>Project 4</h2>
+          
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Project 4" />
+
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
+            adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
+            illum quis!
+          </p>
+        </section>
+
+        <section>       
+          <h2>Testimonials</h2>
+
+          <blockquote>
+            "Dmitrii's work is top-notch. His expertise in frontend development helped our project succeed!" - Client A
+          </blockquote>
+          <blockquote>
+            "Great attention to detail and strong problem-solving skills." - Colleague B
+          </blockquote>
+        </section>
+
+        <!-- <h2>Validation</h2>
+        <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation"> -->
+      </main>
+
+      <footer>
+        <p>&copy; 2025 Dmitrii Danilov. All Rights Reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
