--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/portfolio.css">
   </head>
 
   <body>
@@ -23,7 +24,7 @@
             <a href="index.html">Resume</a>
           </li>
           <li>
-            <a href="portfolio.html">Portfolio</a>
+            <a id="portfolioLinkBtn" href="portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="about.html">About</a>
