--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <nav>
         <ul>
           <li>
-            <a id="resumeLinkBtn" href="index.html">Resume</a>
+            <a id="aboutLinkBtn" href="index.html">About</a>
           </li>
           <li>
             <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="resume.html">Resume</a>
           </li>
         </ul>
       </nav>
