--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html">Resume</a>
+            <a href="index.html">About</a>
           </li>
           <li>
             <a id="portfolioLinkBtn" href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="resume.html">Resume</a>
           </li>
         </ul>
       </nav>
