--- a/resume.html
+++ b/resume.html
@@ -20,13 +20,13 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html">Resume</a>
+            <a href="index.html">About</a>
           </li>
           <li>
             <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="index.html">Resume</a>
           </li>
         </ul>
       </nav>
