--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/resume.css">
   </head>
 
   <body>
@@ -26,7 +27,7 @@
             <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="index.html">Resume</a>
+            <a id="resumeLinkBtn" href="index.html">Resume</a>
           </li>
         </ul>
       </nav>
@@ -109,7 +110,7 @@
         <section>
           <h2>Portfolio Highlight</h2>
           <figure>
-            <img src="images/portfolio-screenshot.jpg" alt="Portfolio Preview" width="400">
+            <img src="https://cdn.dribbble.com/users/606683/screenshots/5697468/invision-studio-portfolio-concept-source-file.png" alt="Portfolio Preview">
             <figcaption>Screenshot of my latest portfolio project.</figcaption>
           </figure>
         </section>
