add validations images

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section>
           <h2>Watch My Talk</h2>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-            title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            title="YouTube video player" allowfullscreen></iframe>
         </section>
 
         <section>
@@ -99,9 +99,15 @@
           </blockquote>
         </section>
 
+        <section>
+          <h2>
+            Validations
+          </h2>
 
-        <!-- <h2>Validation</h2>
-        <img src="images/about-validate.png" alt="About HTML Validation"> -->
+          <img src="images/html-about-validation.png" alt="the About html is valid" >
+
+          <img src="images/css-about-validation.png" alt="the About css is valid" >
+        </section>
       </main>
 
       <footer>
