--- a/portfolio.html
+++ b/portfolio.html
@@ -38,46 +38,49 @@
         <section>
           <h2>Project 1</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Facebook_logo_%28square%29.png" alt="Project 1" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Facebook_logo_%28square%29.png" alt="Project 1" >
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae iusto doloribus, ipsum possimus sapiente
-            corporis repudiandae vero ab ducimus magnam consequuntur, inventore, laboriosam atque? In harum reprehenderit ipsam
-            vitae.
+            Facebook is a social media and social networking service owned by the American technology conglomerate Meta.
+            Created in 2004 by Mark Zuckerberg with four other Harvard College students and roommates, Eduardo Saverin,
+            Andrew McCollum, Dustin Moskovitz, and Chris Hughes, its name derives from the face book directories often
+            given to American university students
           </p>
         </section>
 
         <section>
           <h2>Project 2</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="Project 2" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="Project 2" >
 
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error vero atque maiores incidunt vel. Quam, adipisci nemo
-            ipsa fugit aliquid veniam temporibus quae rem vitae reprehenderit aperiam sunt earum qui!
+            Netflix is an American subscription video on-demand over-the-top streaming service. The service primarily
+            distributes original and acquired films and television shows from various genres, and it is available
+            internationally in multiple languages
           </p>
         </section>
 
         <section>     
           <h2>Project 3</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Apple_logo_grey.svg" alt="Project 3" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Apple_logo_grey.svg" alt="Project 3" >
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sed ipsa eligendi cum velit dicta molestiae?
-            Corrupti quasi quae velit nisi! Beatae pariatur qui sit ipsam accusantium dolorem, neque perspiciatis.
+            Apple Inc. is an American multinational technology company headquartered in Cupertino, California, in Silicon Valley.
+            It is best known for its consumer electronics, software, and services. Founded in 1976 as Apple Computer Company by Steve Jobs,
+            Steve Wozniak and Ronald Wayne, the company was incorporated by Jobs and Wozniak as Apple Computer, Inc. the following year
           </p>
         </section>
 
         <section>       
           <h2>Project 4</h2>
           
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Project 4" />
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Project 4" >
 
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem pariatur, harum consectetur debitis, et mollitia
-            adipisci provident voluptates exercitationem quaerat itaque ad iusto perspiciatis esse temporibus omnis officia
-            illum quis!
+            Amazon Web Services, Inc. (AWS) is a subsidiary of Amazon that provides on-demand cloud computing platforms and APIs to individuals,
+            companies, and governments, on a metered, pay-as-you-go basis. Clients will often use this in combination with autoscaling
+            (a process that allows a client to use more computing in times of high application usage, and then scale down to reduce costs when there is less traffic).
           </p>
         </section>
 
@@ -92,8 +95,15 @@
           </blockquote>
         </section>
 
-        <!-- <h2>Validation</h2>
-        <img src="images/portfolio-validate.png" alt="Portfolio HTML Validation"> -->
+        <section>
+          <h2>
+            Validations
+          </h2>
+
+          <img src="images/html-portfolio-validation.png" alt="the Portfolio html is valid" >
+
+          <img src="images/css-portfolio-validation.png" alt="the Portfolio css is valid" >
+        </section>
       </main>
 
       <footer>
