--- a/resume.html
+++ b/resume.html
@@ -114,6 +114,16 @@
             <figcaption>Screenshot of my latest portfolio project.</figcaption>
           </figure>
         </section>
+
+        <section>
+          <h2>
+            Validations
+          </h2>
+
+          <img src="images/html-resume-validation.png" alt="the Resume html is valid" >
+
+          <img src="images/css-resume-validation.png" alt="the Resume css is valid" >
+        </section>
       </main>
 
       <footer>
