--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <li>
             <a href="resume.html">Resume</a>
           </li>
+          <li>
+            <a href="map.html">Map</a>
+          </li>
         </ul>
       </nav>
 
