--- a/resume.html
+++ b/resume.html
@@ -29,6 +29,9 @@
           <li>
             <a id="resumeLinkBtn" href="index.html">Resume</a>
           </li>
+          <li>
+            <a href="map.html">Map</a>
+          </li>
         </ul>
       </nav>
 
