--- a/map.html
+++ b/map.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/map.css">
+
+    <script defer src="scripts/map.js"></script>
   </head>
 
   <body>
@@ -37,6 +39,8 @@
 
       <main>
         <h1>Dmitrii Danilov's map</h1>
+
+        <div id="map"></div>
       </main>
 
       <footer>
