make the app mobile friendly

--- a/resume.html
+++ b/resume.html
@@ -88,7 +88,7 @@
 
         <section>
           <h2>Skills</h2>
-          <ul>
+          <ul id="skillsWithProgress">
             <li>Angular <progress value="90" max="100"></progress></li>
             <li>React <progress value="85" max="100"></progress></li>
             <li>JavaScript <progress value="95" max="100"></progress></li>
