--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/portfolio.css">
+
+    <script defer src="scripts/portfolio.js"></script>
   </head>
 
   <body>
@@ -38,54 +40,63 @@
       <main>
         <h1>Dmitrii Danilov's portfolio</h1>
 
-        <section>
-          <h2>Project 1</h2>
+        <div class="slider-container" id="slider">
+          <section class="project active">
+            <h2>Project 1</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Facebook_logo_%28square%29.png" alt="Project 1" >
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Facebook_logo_%28square%29.png" alt="Project 1" >
 
-          <p>
-            Facebook is a social media and social networking service owned by the American technology conglomerate Meta.
-            Created in 2004 by Mark Zuckerberg with four other Harvard College students and roommates, Eduardo Saverin,
-            Andrew McCollum, Dustin Moskovitz, and Chris Hughes, its name derives from the face book directories often
-            given to American university students
-          </p>
-        </section>
+            <p>
+              Facebook is a social media and social networking service owned by the American technology conglomerate Meta.
+              Created in 2004 by Mark Zuckerberg with four other Harvard College students and roommates, Eduardo Saverin,
+              Andrew McCollum, Dustin Moskovitz, and Chris Hughes, its name derives from the face book directories often
+              given to American university students
+            </p>
+          </section>
 
-        <section>
-          <h2>Project 2</h2>
+          <section class="project">
+            <h2>Project 2</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="Project 2" >
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png" alt="Project 2" >
 
-          <p>
-            Netflix is an American subscription video on-demand over-the-top streaming service. The service primarily
-            distributes original and acquired films and television shows from various genres, and it is available
-            internationally in multiple languages
-          </p>
-        </section>
+            <p>
+              Netflix is an American subscription video on-demand over-the-top streaming service. The service primarily
+              distributes original and acquired films and television shows from various genres, and it is available
+              internationally in multiple languages
+            </p>
+          </section>
 
-        <section>     
-          <h2>Project 3</h2>
+          <section class="project">     
+            <h2>Project 3</h2>
 
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Apple_logo_grey.svg" alt="Project 3" >
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Apple_logo_grey.svg" alt="Project 3" >
 
-          <p>
-            Apple Inc. is an American multinational technology company headquartered in Cupertino, California, in Silicon Valley.
-            It is best known for its consumer electronics, software, and services. Founded in 1976 as Apple Computer Company by Steve Jobs,
-            Steve Wozniak and Ronald Wayne, the company was incorporated by Jobs and Wozniak as Apple Computer, Inc. the following year
-          </p>
-        </section>
+            <p>
+              Apple Inc. is an American multinational technology company headquartered in Cupertino, California, in Silicon Valley.
+              It is best known for its consumer electronics, software, and services. Founded in 1976 as Apple Computer Company by Steve Jobs,
+              Steve Wozniak and Ronald Wayne, the company was incorporated by Jobs and Wozniak as Apple Computer, Inc. the following year
+            </p>
+          </section>
 
-        <section>       
-          <h2>Project 4</h2>
-          
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Project 4" >
+          <section class="project">       
+            <h2>Project 4</h2>
+            
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Project 4" >
 
-          <p>
-            Amazon Web Services, Inc. (AWS) is a subsidiary of Amazon that provides on-demand cloud computing platforms and APIs to individuals,
-            companies, and governments, on a metered, pay-as-you-go basis. Clients will often use this in combination with autoscaling
-            (a process that allows a client to use more computing in times of high application usage, and then scale down to reduce costs when there is less traffic).
-          </p>
-        </section>
+            <p>
+              Amazon Web Services, Inc. (AWS) is a subsidiary of Amazon that provides on-demand cloud computing platforms and APIs to individuals,
+              companies, and governments, on a metered, pay-as-you-go basis. Clients will often use this in combination with autoscaling
+              (a process that allows a client to use more computing in times of high application usage, and then scale down to reduce costs when there is less traffic).
+            </p>
+          </section>
+        </div>
+
+        <div class="controls">
+          <button class="control-btn" id="prev">Previous</button>
+          <button class="control-btn" id="next">Next</button>
+        </div>
+
+        <div class="dots-container" id="dots"></div>
 
         <section>       
           <h2>Testimonials</h2>
