--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,7 @@
 
             <p>
               Facebook is a social media and social networking service owned by the American technology conglomerate Meta.
-              Created in 2004 by Mark Zuckerberg with four other Harvard College students and roommates, Eduardo Saverin,
-              Andrew McCollum, Dustin Moskovitz, and Chris Hughes, its name derives from the face book directories often
-              given to American university students
+              Created in 2004 by Mark Zuckerberg with four other Harvard College students and roommates
             </p>
           </section>
 
@@ -73,8 +71,7 @@
 
             <p>
               Apple Inc. is an American multinational technology company headquartered in Cupertino, California, in Silicon Valley.
-              It is best known for its consumer electronics, software, and services. Founded in 1976 as Apple Computer Company by Steve Jobs,
-              Steve Wozniak and Ronald Wayne, the company was incorporated by Jobs and Wozniak as Apple Computer, Inc. the following year
+              It is best known for its consumer electronics, software, and services
             </p>
           </section>
 
@@ -85,8 +82,7 @@
 
             <p>
               Amazon Web Services, Inc. (AWS) is a subsidiary of Amazon that provides on-demand cloud computing platforms and APIs to individuals,
-              companies, and governments, on a metered, pay-as-you-go basis. Clients will often use this in combination with autoscaling
-              (a process that allows a client to use more computing in times of high application usage, and then scale down to reduce costs when there is less traffic).
+              companies, and governments, on a metered, pay-as-you-go basis
             </p>
           </section>
         </div>
